--- a/index.html
+++ b/index.html
@@ -18,14 +18,13 @@
 
   <body>
 
-    <!--  
-Image from Photobucket user, Upopme http://photobucket.com/images/changing%20weather
+<!--  
+Image by Aimee Wilder
+see more at aimeewilder.com
 -->
 
 <div>
 <p id="area"> Weather in </p>
-<img src="http://i563.photobucket.com/albums/ss77/upopme/ChangingWeather.gif">
-  <br>
   <button id="button"> <p id="temp"> </button>
 <p id="description"></p> 
 </div>
